fixed overflow

--- a/style.css
+++ b/style.css
@@ -1,39 +1,24 @@
 * {
     margin: 0;
     padding: 0;
-    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 
-body {
+body,
+#html {
     height: 100vh;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
     overflow: hidden;
 }
 
 .line {
+    overflow: hidden;
     position: absolute;
     width: 100%;
     overflow: hidden;
     height: 100%;
-    background-image: -webkit-gradient(
-            linear,
-            left top,
-            left bottom,
-            from(rgba(0, 0, 0, 0.7)),
-            to(rgba(0, 0, 0, 0.9))
-        ),
-        url('./hero.jpg');
-    background-image: -o-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.9)),
-        url('./hero.jpg');
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.9)),
         url('./hero.jpg');
     background-repeat: no-repeat;
@@ -69,8 +54,6 @@ body {
     height: 100%;
     background-repeat: repeat no-repeat;
     background-position: 0 bottom;
-    -webkit-transform-origin: center bottom;
-    -ms-transform-origin: center bottom;
     transform-origin: center bottom;
 }
 
@@ -80,42 +63,22 @@ body {
 
 .wave2 {
     background-size: 50% 100px;
-    -webkit-animation: animate 12s linear infinite;
     animation: animate 12s linear infinite;
 }
 
 .wave3 {
     background-size: 50% 80px;
-    -webkit-animation: animate 18s linear infinite;
     animation: animate 18s linear infinite;
-}
-
-@-webkit-keyframes animate {
-    0% {
-        -webkit-transform: translateX(0) translateZ(0) scaleY(1);
-        transform: translateX(0) translateZ(0) scaleY(1);
-    }
-    50% {
-        -webkit-transform: translateX(-25%) translateZ(0) scaleY(0.5);
-        transform: translateX(-25%) translateZ(0) scaleY(0.5);
-    }
-    100% {
-        -webkit-transform: translateX(-50%) translateZ(0) scaleY(1);
-        transform: translateX(-50%) translateZ(0) scaleY(1);
-    }
 }
 
 @keyframes animate {
     0% {
-        -webkit-transform: translateX(0) translateZ(0) scaleY(1);
         transform: translateX(0) translateZ(0) scaleY(1);
     }
     50% {
-        -webkit-transform: translateX(-25%) translateZ(0) scaleY(0.5);
         transform: translateX(-25%) translateZ(0) scaleY(0.5);
     }
     100% {
-        -webkit-transform: translateX(-50%) translateZ(0) scaleY(1);
         transform: translateX(-50%) translateZ(0) scaleY(1);
     }
 }
